Update redirects for moved API documentation
Moved various API design and management documentation to new paths under manage-apis.

--- a/en/redirects.yml
+++ b/en/redirects.yml
@@ -649,3 +649,100 @@
 'administer/managing-users-and-roles/managing-user-stores/configure-primary-user-store/configuring-a-read-write-ldap-user-store.md': '{{SITE_URL}}/install-and-setup/setup/configure-userstores/configure-primary-user-store/configuring-a-read-write-ldap-user-store/'
 'administer/managing-users-and-roles/managing-user-stores/configure-primary-user-store/configuring-a-read-only-ldap-user-store.md': '{{SITE_URL}}/install-and-setup/setup/configure-userstores/configure-primary-user-store/configuring-a-read-only-ldap-user-store/'
 'administer/managing-users-and-roles/managing-user-stores/configure-primary-user-store/configuring-a-read-write-active-directory-user-store.md': '{{SITE_URL}}/install-and-setup/setup/configure-userstores/configure-primary-user-store/configuring-a-read-write-active-directory-user-store/'
+
+# --- Design APIs (Moved to manage-apis/design) ---
+'design/design-api-overview.md': 'manage-apis/design/design-api-overview/'
+'design/create-api/create-rest-api/generate-rest-api-from-soap-backend.md': 'manage-apis/design/create-api/create-rest-api/generate-rest-api-from-soap-backend/'
+'design/create-api/create-streaming-api/streaming-api-overview.md': 'manage-apis/design/create-api/create-streaming-api/streaming-api-overview/'
+'design/create-api/create-streaming-api.md': 'manage-apis/design/create-api/create-streaming-api/test-a-websub-api/'
+'design/create-api/create-ai-api/create-an-ai-api.md': 'manage-apis/design/create-api/create-ai-api/create-an-ai-api/'
+'design/prototype-api/create-mocked-js-api.md': 'https://apim.docs.wso2.com/en/4.6.0/manage-apis/design/prototype-api/create-mocked-js-api/'
+              
+# --- Endpoints & Security (Moved to manage-apis/design) ---
+'design/endpoints/endpoint-security/basic-auth.md': 'manage-apis/design/endpoints/endpoint-security/basic-auth/'
+'design/endpoints/endpoint-security/digest-auth.md': 'manage-apis/design/endpoints/endpoint-security/digest-auth/'
+'design/endpoints/endpoint-security/oauth-2.0.md': 'manage-apis/design/endpoints/endpoint-security/oauth-2.0/'
+'design/endpoints/high-availability-for-endpoints.md': 'manage-apis/design/endpoints/high-availability-for-endpoints/'
+'design/endpoints/resiliency/endpoint-timeouts.md': 'manage-apis/design/endpoints/resiliency/endpoint-timeouts/'
+'design/endpoints/resiliency/endpoint-suspension.md': 'manage-apis/design/endpoints/resiliency/endpoint-suspension/'
+'design/endpoints/resiliency/prevent-api-suspension.md': 'manage-apis/design/endpoints/resiliency/prevent-api-suspension/'
+              
+# --- Lifecycle & Policies (Moved to manage-apis/design) ---
+'design/api-versioning/deprecate-the-old-version.md': 'manage-apis/design/api-versioning/deprecate-the-old-version/'
+'design/api-versioning/backward-compatibility.md': 'https://apim.docs.wso2.com/en/4.6.0/manage-apis/design/api-versioning/backward-compatibility/'
+'design/api-documentation/view-generated-documentation.md': 'https://apim.docs.wso2.com/en/4.6.0/manage-apis/design/api-documentation/view-generated-documentation/'
+'design/api-policies/attach-policy.md': 'https://apim.docs.wso2.com/en/4.6.0/manage-apis/design/api-policies/attach-policy/'
+'design/api-policies/create-policy.md': 'https://apim.docs.wso2.com/en/4.6.0/manage-apis/design/api-policies/create-policy/'
+            
+# --- Deploy and Publish (Moved to manage-apis/deploy-and-publish) ---
+'deploy-and-publish/deploy-on-gateway/deploy-api/exposing-apis-via-custom-hostnames.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/deploy-api/exposing-apis-via-custom-hostnames/'
+'deploy-and-publish/deploy-on-gateway/deploy-api/deploy-through-multiple-api-gateways.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/deploy-api/deploy-through-multiple-api-gateways/'
+'deploy-and-publish/deploy-on-gateway/deploy-api/revision-deployment-workflow.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/deploy-api/revision-deployment-workflow/'
+'deploy-and-publish/deploy-on-gateway/api-gateway/overview-of-the-api-gateway.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/api-gateway/overview-of-the-api-gateway/'
+'deploy-and-publish/deploy-on-gateway/api-gateway/gateway-policies.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/api-gateway/gateway-policies/'
+'deploy-and-publish/deploy-on-gateway/api-gateway/response-caching.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/api-gateway/response-caching/'
+'deploy-and-publish/deploy-on-gateway/api-gateway/maintaining-separate-production-and-sandbox-gateways.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/api-gateway/maintaining-separate-production-and-sandbox-gateways/'
+'deploy-and-publish/deploy-on-gateway/api-gateway/scaling-the-gateway.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/api-gateway/scaling-the-gateway/'
+'deploy-and-publish/publish-on-dev-portal/third-party-api-support.md': 'manage-apis/deploy-and-publish/publish-on-dev-portal/third-party-api-support/'
+
+# --- Analytics (Moved to monitoring/api-analytics) ---
+'api-analytics/moesif-analytics/moesif-integration-guide.md': 'monitoring/api-analytics/moesif-analytics/moesif-integration-guide/'
+'api-analytics/choreo-analytics/api-analytics-architecture.md': 'monitoring/api-analytics/choreo-analytics/api-analytics-architecture/'
+'api-analytics/choreo-analytics/getting-started-guide.md': 'monitoring/api-analytics/choreo-analytics/getting-started-guide/'
+'api-analytics/choreo-analytics/role-based-access-control.md': 'monitoring/api-analytics/choreo-analytics/role-based-access-control/'
+'api-analytics/choreo-analytics/configure-alerts.md': 'monitoring/api-analytics/choreo-analytics/configure-alerts/'
+'api-analytics/on-prem/elk-installation-guide.md': 'monitoring/api-analytics/on-prem/elk-installation-guide/'
+'api-analytics/on-prem/datadog-installation-guide.md': 'monitoring/api-analytics/on-prem/datadog-installation-guide/'
+
+# --- Observe (Moved to monitoring/observability) ---
+'observe/observe-overview.md': 'monitoring/observability/observability-overview/'
+'observe/api-manager/monitoring-correlation-logs.md': 'monitoring/observability/monitoring-correlation-logs/'
+'observe/api-manager/monitoring-http-access-logs.md': 'monitoring/observability/monitoring-http-access-logs/'
+'observe/api-manager/monitoring-audit-logs.md': 'monitoring/observability/monitoring-audit-logs/'
+'observe/api-manager/monitoring-api-logs.md': 'monitoring/observability/monitoring-api-logs/'
+'observe/api-manager/traces/monitoring-with-opentracing.md': 'monitoring/observability/traces/monitoring-with-opentracing/'
+'observe/api-manager/traces/monitoring-with-opentelemetry.md': 'monitoring/observability/traces/monitoring-with-opentelemetry/'
+'observe/api-manager/metrics/jmx-based-monitoring.md': 'monitoring/observability/metrics/jmx-based-monitoring/'
+
+# --- Install and Setup (Unchanged top-level) ---
+'install-and-setup/install-and-setup-overview.md': 'install-and-setup/install-and-setup-overview/'
+'install-and-setup/install/installation-prerequisites.md': 'install-and-setup/install/installation-prerequisites/'
+'install-and-setup/install/installing-the-product/installing-api-m-runtime.md': 'install-and-setup/install/installing-the-product/installing-api-m-runtime/'
+'install-and-setup/install/installing-the-product/running-the-api-m.md': 'install-and-setup/install/installing-the-product/running-the-api-m/'
+'install-and-setup/setup/setting-up-databases/overview.md': 'install-and-setup/setup/setting-up-databases/overview/'
+
+'design/api-definitions/create-a-rest-api-from-an-openapi-definition.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition/'
+'design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api-from-an-openapi-definition/'
+'design/create-api/create-rest-api/create-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/create-a-rest-api/'
+'design/create-api/create-rest-api/expose-a-soap-service-as-a-rest-api.md': 'tutorials/expose-a-soap-service-as-a-rest-api/'
+'design/create-api/create-rest-api/test-a-rest-api.md': 'manage-apis/design/create-api/create-rest-api/test-a-rest-api/'
+'design/create-api/create-a-graphql-api.md': 'manage-apis/design/create-api/create-a-graphql-api/'
+'design/create-api/create-a-websocket-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websocket-streaming-api/'
+'design/create-api/create-streaming-api/create-a-websocket-streaming-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websocket-streaming-api/'
+'design/create-api/create-a-websub-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websub-streaming-api/'
+'design/create-api/create-streaming-api/create-a-websub-streaming-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-websub-streaming-api/'
+'design/create-api/create-a-sse-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-sse-streaming-api/'
+'design/create-api/create-streaming-api/create-a-sse-streaming-api.md': 'manage-apis/design/create-api/create-streaming-api/create-a-sse-streaming-api/'
+'design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition.md': 'manage-apis/design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition/'
+'design/create-api/adding-custom-properties-to-apis.md': 'manage-apis/design/create-api/adding-custom-properties-to-apis/'
+'design/create-api/change-api-thumbnail.md': 'manage-apis/design/create-api/change-api-thumbnail/'
+'design/create-api/create-api-revisions.md': 'manage-apis/design/create-api/create-api-revisions/'
+'design/create-api/create-an-api-using-a-service.md': 'manage-apis/design/create-api/create-an-api-using-a-service/'
+'design/prototype-api/overview.md': 'manage-apis/design/prototype-api/overview/'
+'design/prototype-api/backend-url-prototype-api.md': 'manage-apis/design/prototype-api/backend-url-prototype-api/'
+'design/create-api-product/api-product-overview.md': 'manage-apis/design/create-api-product/api-product-overview/'
+'design/create-api-product/create-api-product.md': 'manage-apis/design/create-api-product/create-api-product/'
+'design/endpoints/endpoint-types.md': 'manage-apis/design/endpoints/endpoint-types/'
+'design/endpoints/certificates.md': 'manage-apis/design/endpoints/certificates/'
+'design/lifecycle-management/api-lifecycle.md': 'manage-apis/design/lifecycle-management/api-lifecycle/'
+'design/lifecycle-management/customize-api-life-cycle.md': 'manage-apis/design/lifecycle-management/customize-api-life-cycle/'
+'design/api-versioning/create-a-new-api-version.md': 'manage-apis/design/api-versioning/create-a-new-api-version/'
+'design/api-versioning/enabling-notifications.md': 'manage-apis/design/api-versioning/enabling-notifications/'
+'design/api-documentation/add-api-documentation.md': 'manage-apis/design/api-documentation/add-api-documentation/'
+'design/api-collaborations/comment-on-an-api-via-the-publisher.md': 'manage-apis/design/api-collaborations/comment-on-an-api-via-the-publisher/'
+'design/api-policies/overview.md': 'manage-apis/design/api-policies/overview/'
+'design/rate-limiting/introducing-throttling-use-cases.md': 'manage-apis/design/rate-limiting/introducing-throttling-use-cases/'
+'design/api-monetization/monetizing-an-api.md': 'manage-apis/design/api-monetization/monetizing-an-api/'
+'design/advanced-topics/enable-publisher-access-control-in-api-publisher-portal.md': 'manage-apis/design/advanced-topics/enable-publisher-access-control-in-api-publisher-portal/'
+'deploy-and-publish/deploy-on-gateway/deploy-api/deploy-an-api.md': 'manage-apis/deploy-and-publish/deploy-on-gateway/deploy-api/deploy-an-api/'
+'deploy-and-publish/publish-on-dev-portal/publish-an-api.md': 'manage-apis/deploy-and-publish/publish-on-dev-portal/publish-an-api/'
