[4.2.0] Update moesif docs (#10459)
* Add Moesif Analytics Integration Guide and related assets

* Fix: Update Moesif Analytics architecture link to point to Choreo Analytics documentation

* Fix: Update Moesif Analytics integration support version to 4.3.0 in the integration guide

* Fix: Update Moesif Analytics integration support version to 4.2.0 in the integration guide

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -847,6 +847,7 @@ nav:
                        - Calculate Aggregations Over Time': use-cases/examples/streaming-examples/aggregate-over-time.md
     - Analytics:
         - API Analytics:
+            - Moesif Analytics: api-analytics/moesif-analytics/moesif-integration-guide.md
             - Choreo Based Analytics: 
                 - Architecture: api-analytics/choreo-analytics/api-analytics-architecture.md
                 - Getting Started Guide: api-analytics/choreo-analytics/getting-started-guide.md
