Add SameSite attribute configuration for cookie processor

--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -5489,6 +5489,27 @@
                 }
             ],
             "exampleFile": "synapse_artifact_generator_pool.toml"
+        },
+        {
+            "title": "SameSite attribute of cookies configurations",
+            "options": [
+                {
+                    "name": "web_app.cookie_processor",
+                    "required": false,
+                    "description": "This can be configured to update SameSite attribute of the cookies.",
+                    "params": [
+                        {
+                            "name": "same_site_cookies",
+                            "type": "string",
+                            "required": false,
+                            "default": "",
+                            "possible": "strict, lax, none",
+                            "description": "This configuration should be used only if it is required to change the SameSite attribute of all the cookies to the configured value. Note that this configuration is only available from update level 383 onwards."
+                        }
+                    ]
+                }
+            ],
+            "exampleFile": "web_app.cookie_processor.toml"
         }
     ]
 }
