--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -6078,6 +6078,27 @@
                 }
             ],
             "exampleFile": "basic_authenticator.toml"
+        },
+        {
+            "title": "SameSite attribute of cookies configurations",
+            "options": [
+                {
+                    "name": "web_app.cookie_processor",
+                    "required": false,
+                    "description": "This can be configured to update SameSite attribute of the cookies.",
+                    "params": [
+                        {
+                            "name": "same_site_cookies",
+                            "type": "string",
+                            "required": false,
+                            "default": "",
+                            "possible": "strict, lax, none",
+                            "description": "This configuration should be used only if it is required to change the SameSite attribute of all the cookies to the configured value. Note that this configuration is available starting from update level 46 for All-in-One and 47 for ACP."
+                        }
+                    ]
+                }
+            ],
+            "exampleFile": "web_app.cookie_processor.toml"
         }
     ]
 }
