Update SameSite attribute configuration availability notes for clarity

--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -6093,7 +6093,7 @@
                             "required": false,
                             "default": "",
                             "possible": "strict, lax, none",
-                            "description": "This configuration should be used only if it is required to change the SameSite attribute of all the cookies to the configured value. Note that this configuration is available starting from update wso2am-4.5.0.46 and wso2am-acp-4.5.0.47."
+                            "description": "This configuration should be used only if it is required to change the SameSite attribute of all the cookies to the configured value. Note that this configuration is available in wso2am-4.5.0 starting from update level 46 and wso2am-acp-4.5.0 starting from update level 47."
                         }
                     ]
                 }
